add filter and add logic tree handler methode